# recsys

./: .gitignore  7-tomaz-suller-xgboost.ipynb  8-tomaz-suller-gabs-code.ipynb  9-tomaz-suller-submission.ipynb  GabsNotebook.ipynb  Hybrid_RP3_ICM+SlimEN_Recall.ipynb  Makefile  Practice 06 - SLIM MSE with Gradient Descent and Cython.ipynb  Practice 07 - MF with Cython.ipynb  Practice 12 - Hybrid recommenders.ipynb  Practice extra 10 - Graph-based Recommenders basics.ipynb  Practice extra 11 - Deep Learning Recommenders.ipynb  README.md  XGBoostTestREC.ipynb  cython_example_FunkSVD.py  cython_example_SLIM_MSE.py  environment-mac-m1.yml  environment.yml  pyproject.toml  requirements.txt  run_all_algorithms.py  run_compile_all_cython.py  run_hyperparameter_search.py  run_ranker_dataset.py  run_score_hybrid_optimisation.py  run_test_recommenders.py  run_train_kfold.py  submission.csv  user_hybrid_hyperparameter_search.py
CythonCompiler/: compile_script.py  run_compile_subprocess.py
Data_manager/: DataPostprocessing.py  DataPostprocessing_K_Cores.py  DataReader.py  DataReader_utils.py  DataSplitter.py  DataSplitter_Holdout.py  DataSplitter_leave_k_out.py  Dataset.py  DatasetMapperManager.py  IncrementalSparseMatrix.py  TagPreprocessing.py  __init__.py  competition.py  data_consistency_check.py  run_clean_split_data_files.py
Evaluation/: Evaluator.py  metrics.py
HyperparameterTuning/: SearchAbstractClass.py  SearchBayesianSkopt.py  SearchSingleCase.py  run_hyperparameter_search.py
Notebooks_utils/: Compute_Similarity_Python.py  compileCython.py
(+95 files in other folders)
