[project]
name = "recsys-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "cython==0.29.23",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy<2",
    "pandas<2",
    "scikit-learn>=1.5.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tables>=3.10.1",
    "torch<2",
    "tqdm>=4.67.0",
]
